--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
+    "minireset.css": "^0.0.7",
     "next": "12.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "typed.js": "^2.0.12"
   },
   "devDependencies": {
     "eslint": "7",
